# RFM-Compass

./: .env.example  .gitignore  README.md  go
backend/: pyproject.toml
backend/app/: main.py  service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  theme.ts
frontend/src/components/: Compass.tsx  QueryDeck.tsx  ResultsPanel.tsx
