[project]
name = "rfm-compass-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "kumoai>=2.22",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.0",
    "pyarrow>=14",
    "s3fs>=2024.2",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
